[package]
name = "time-test"
version = "0.2.2"
authors = ["Lewin Bormann <lewin@lewin-bormann.info>"]
license = "MIT"
description = "Measure how long your test cases take with one simple macro."
repository = "https://bitbucket.org/dermesser/time_test"
documentation = "https://docs.rs/time-test"
edition = "2018"

[dependencies]
time = "0.1"
