[package]
name = "time-test"
version = "0.2.3"
authors = ["Lewin Bormann <lewin@lewin-bormann.info>"]
license = "MIT"
description = "Measure how long your test cases take with one simple macro."
repository = "https://github.com/dermesser/time-test"
documentation = "https://docs.rs/time-test"
edition = "2018"

[dependencies]
time = "0.1"

[[example]]
name = "example"
crate-type = ["bin"]
